--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.19.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-clipboard.js": "^2.0.16",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
